provisioning/kubernetes/templates/templates-api.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: templates-api
  namespace: default
  labels:
    app: templates-api
    releaseId: $RELEASE_ID
spec:
  replicas: $TEMPLATES_API_REPLICAS
  selector:
    matchLabels:
      app: templates-api
  template:
    metadata:
      labels:
        app: templates-api
        releaseId: $RELEASE_ID
        tags.datadoghq.com/env: "$KEBOOLA_STACK"
        tags.datadoghq.com/service: "templates-api"
        tags.datadoghq.com/version: "$RELEASE_ID"
      annotations:
        log: "true"
    spec:
      containers:
        - name: templates-api
          image: $TEMPLATES_API_REPOSITORY:$TEMPLATES_API_IMAGE_TAG
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health-check
              port: 8000
              httpHeaders:
                - name: Host
                  value: KubernetesReadinessProbe
            initialDelaySeconds: 5
            periodSeconds: 10
      tolerations:
        - key: app
          operator: Exists
          effect: NoSchedule
      nodeSelector:
        nodepool: main
